# OrderFlow

./: .env.example  .gitignore  README.md  pyproject.toml
data_generator/: pyproject.toml
data_generator/src/: generate_data.py
databricks/notebooks/: 00_hello_pyspark.py  _bootstrap.py
databricks/notebooks/bronze/: 01_bronze_hello_orders.py
scripts/: generate_data.py  hello_pyspark_local.py  upload_to_adls.py
src/orderflow/: __init__.py
src/orderflow/generator/: __init__.py  data_generator.py
src/orderflow/ingestion/: __init__.py  adls_upload.py
src/orderflow/spark/: hello_orders.py
tests/: conftests.py  test_adls_upload.py  test_data_generator.py
