[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-data-platform"
version = "0.1.0"
description = "Production-style ecommerce data engineering project with synthetic source data generation."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "faker>=25.0.0",
]

[project.scripts]
orderflow-generate-data = "orderflow.generator.data_generator:main"

[tool.setuptools.packages.find]
where = ["src"]
