[build-system]
requires = ["setuptools>=68,<76", "wheel>=0.42,<1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow"
version = "0.1.0"
description = "Production-style ecommerce data engineering project with synthetic source data generation."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "faker>=25.0.0,<50.0.0",
    "azure-storage-blob>=12.20.0,<13.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyspark==4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<27.0.0",
    "ruff>=0.9.0,<1.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
]

[project.scripts]
orderflow-generate-data = "orderflow.generator.data_generator:main"
orderflow-upload-adls = "orderflow.ingestion.adls_upload:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # modern Python syntax
]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/orderflow"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
