[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-analytics-platform"
version = "0.1.0"
description = "Production-style ecommerce data engineering project with synthetic source data generation."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "faker>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]